--- a/Is_it_prime/Base.lproj/Main.storyboard
+++ b/Is_it_prime/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Is_it_prime" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +15,84 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Is It prime? " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WDl-DL-hGU">
+                                <rect key="frame" x="239" y="61" width="121" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="OJa-cv-vga"/>
+                                    <constraint firstAttribute="width" constant="121" id="dKh-SO-aeP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter a number in the box" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9lV-t5-Wvx">
+                                <rect key="frame" x="196" y="129" width="207" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="207" id="l7J-d5-eX4"/>
+                                    <constraint firstAttribute="height" constant="21" id="mOx-7k-mFq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Eg. 17" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AMd-n1-k6N">
+                                <rect key="frame" x="251" y="182" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="JRw-M0-rwB"/>
+                                    <constraint firstAttribute="height" constant="30" id="zDs-xY-j4p"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iXp-zB-lbg">
+                                <rect key="frame" x="0.0" y="311" width="600" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="4NU-L4-Xg5"/>
+                                    <constraint firstAttribute="width" constant="600" id="NlS-7R-TCh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9eN-VN-oY8">
+                                <rect key="frame" x="226" y="243" width="148" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="148" id="QxS-DZ-Byx"/>
+                                    <constraint firstAttribute="height" constant="30" id="YsB-a6-llE"/>
+                                </constraints>
+                                <state key="normal" title="Is It Prime?">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonClicked:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="JET-VJ-Agt"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="AMd-n1-k6N" secondAttribute="centerX" id="DpO-fx-c1x"/>
+                            <constraint firstItem="9eN-VN-oY8" firstAttribute="top" secondItem="AMd-n1-k6N" secondAttribute="bottom" constant="31" id="EU4-m7-e81"/>
+                            <constraint firstItem="WDl-DL-hGU" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="41" id="L2n-G7-7Na"/>
+                            <constraint firstAttribute="centerX" secondItem="9eN-VN-oY8" secondAttribute="centerX" id="PJc-N7-2vV"/>
+                            <constraint firstItem="9lV-t5-Wvx" firstAttribute="top" secondItem="WDl-DL-hGU" secondAttribute="bottom" constant="47" id="RhY-lf-8oV"/>
+                            <constraint firstItem="9eN-VN-oY8" firstAttribute="top" secondItem="AMd-n1-k6N" secondAttribute="bottom" constant="31" id="XHp-mQ-rti"/>
+                            <constraint firstItem="iXp-zB-lbg" firstAttribute="top" secondItem="9eN-VN-oY8" secondAttribute="bottom" constant="38" id="eJ2-Q0-BHu"/>
+                            <constraint firstAttribute="centerX" secondItem="9lV-t5-Wvx" secondAttribute="centerX" id="f3e-Ch-jAp"/>
+                            <constraint firstAttribute="centerX" secondItem="WDl-DL-hGU" secondAttribute="centerX" id="fPd-4N-hxD"/>
+                            <constraint firstAttribute="centerX" secondItem="9eN-VN-oY8" secondAttribute="centerX" id="iwV-ag-W9J"/>
+                            <constraint firstItem="AMd-n1-k6N" firstAttribute="top" secondItem="9lV-t5-Wvx" secondAttribute="bottom" constant="32" id="jrg-xU-7j3"/>
+                            <constraint firstAttribute="centerX" secondItem="iXp-zB-lbg" secondAttribute="centerX" id="rD0-Bp-Dwe"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="numberBox" destination="AMd-n1-k6N" id="ZNk-gG-Vrw"/>
+                        <outlet property="resultLabel" destination="iXp-zB-lbg" id="yDu-He-X81"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="97" y="342"/>
         </scene>
     </scenes>
 </document>
